--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "gametimer",
+  "name": "copyStack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\" ",
     "start": "npm run build && cd server && node server.js",
-    "server": "cd server && node server.js --ignore client",
-    "build": "cd client && npm run build --max_old_space_size=4096 node_modules/.bin/react-scripts build",
+    "server": "cd server server.js --ignore client",
+    "build": "cd client && npm run build --max_old_space_size=5120 node_modules/.bin/react-scripts build",
     "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start",
-    "develop": "concurrently \"cd server && npm run develop\" \"cd client && npm start\"",
-    
-    "dev": "concurrently \"cd server && npm run develop\" \"cd client && npm start\"",
+    "develop": "concurrently \"cd server && npm run develop\" \"cd client && npm run dev\"",
+    "dev": "concurrently \"cd server && npm run develop\" \"cd client && npm run dev\"",
     "seed": "cd server && npm run seed",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/l1keafox/GameTimer.git"
+    "url": "git+https://github.com/l1keafox/copyStack.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/l1keafox/GameTimer/issues"
+    "url": "https://github.com/l1keafox/copyStack/issues"
   },
-  "homepage": "https://github.com/l1keafox/GameTimer#readme",
+  "homepage": "https://github.com/l1keafox/copyStack#readme",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@apollo/server": "^4.1.1",
     "apollo-server-express": "^3.10.3",
     "concurrently": "^7.4.0",
-    "dotenv": "^16.0.3",
-    "jsonwebtoken": "^8.5.1",
-    "node-fetch": "^2.6.7"
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
